...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


 <ScrollView
     android:id="@+id/profile_scroll"
     android:layout_width="0dp"
     android:layout_height="0dp"
     android:scrollbars="none"
     app:layout_constraintBottom_toTopOf="@id/include_profile"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
...
