<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?android:attr/selectableItemBackground"
    android:id="@+id/historyPointItem">

    <androidx.cardview.widget.CardView
        android:id="@+id/history_point_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/lighter_blue"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/history_point_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/logo_yellow"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/history_point_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="85dp"
            android:layout_marginBottom="15dp"
            android:textSize="12sp"
            android:textColor="@color/white"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>