...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">

 <ScrollView
     android:id="@+id/point_scroll"
     android:layout_width="0dp"
     android:layout_height="0dp"
     android:scrollbars="none"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
...
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      tools:context=".ui.PointActivity">


   <TextView
       android:id="@+id/point_name"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/margin_15"
       android:textColor="@color/logo_yellow"
       android:textSize="@dimen/title_size"
       android:textStyle="bold"
...
       android:textSize="@dimen/text_size"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/point_prop_tag" />

   <Button
       android:id="@+id/point_visited_button"
       android:layout_width="match_parent"
       android:layout_height="@dimen/button_height"
       android:layout_margin="@dimen/margin_15"
       android:backgroundTint="@color/logo_yellow"
       android:text="@string/point_visited"
       android:textSize="@dimen/small_button_text"
...
